[package]
name = "solana-nft-brain"
version = "0.1.0"
edition = "2021"

[dependencies]

ndarray-linalg = { version = "0.16", features = ["intel-mkl"] } 

llama_cpp = "0.3.1"

# Async runtime
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
rand = "0.8"
rand_distr = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# For rate limiting
dashmap = "5.5"

# For environment variables
dotenv = "0.15"

# For Solana interaction
solana-sdk = "1.16"
solana-client = "1.16"
anchor-client = "0.28"

# For image processing
image = "0.24"

# For ML/ONNX
ort = { version = "1.15.2", features = ["cuda"] }
tokenizers = "0.13"
ndarray = "0.15"

# CLI
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"

[build-dependencies]
cc = "1.0"

